Day-3-inputs-variables/main.tf/main.tf
resource "aws_instance" "name" {
  ami = var.ami_id
    instance_type = var.instance_type
    vpc_security_group_ids = [aws_security_group.my_security_group.id]
    tags = {
        Name = var.tags
    }
}
resource "aws_vpc" "name" {
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "dev"
    }
}


resource "aws_security_group" "my_security_group" {
    name        = "my-security-group"
    description = "Allow SSH and HTTP traffic"
    vpc_id      = aws_vpc.name.id

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
